* Support for G.722 and G.726 codecs in the RTP Player (via the SpanDSP library).
* You can now choose the output device when playing RTP streams.
* Added support for dissectors to include a unit name natively in their hf field.
  A field can now automatically append "seconds" or "ms" to its value without
  additional printf-style APIs.
* The Default profile can now be reset to default values.

//=== Removed Dissectors

//=== New File Format Decoding Support

=== New Protocol Support

// Add one protocol per line between the --sort-and-group-- delimiters.
--sort-and-group--
Bluetooth HCI Vendor Intel
CAN FD
Ericsson A-bis P-GSL
Ericsson A-bis TFP (Traffic Forwarding Protocol)
Fc00/cjdns Protocol
GSM Osmux
Health Level 7 (HL7)
High-speed SECS message service (HSMS)
iPerf2
ISO 15765
Local Service Discovery (LSD)
M2 Application Protocol
Nordic BLE Sniffer
NVMe Fabrics RDMA
NVMe
RFTap Protocol
SCTE-35 Digital Program Insertion Messages
Snort Post-dissector
Unified Diagnostic Services (UDS)
vSocket
Windows Cluster Management API (clusapi)
GSMTAP based logging
HomePNA
X-Rite i1 Display Pro (and derivatives) USB protocol
IndigoCare iCall protocol
IndigoCare Netrix protocol
--sort-and-group--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

_Non-empty section placeholder._
// Add one file type per line between the --sort-and-group-- delimiters.
--sort-and-group--
--sort-and-group--

=== New and Updated Capture Interfaces support

_Non-empty section placeholder._
--sort-and-group--
--sort-and-group--

//=== Major API Changes
IEEE802.11: wlan_mgt display filter element got renamed to wlan.
Libgcrypt is now a required dependency.

== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can